2008-05-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (createIvalType, createIvalStruct, createIvalArray,
	  createIvalCharPtr, createIvalPtr, createIval),
	* src/SDCCval.h
	* src/SDCCval.c (convertIListToConstList, list2expr): handle incomplete
	  initializers for local auto variables
	* support/regression/tests/zeropad.c: added testcase for auto initializers

2008-05-26 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/startup/crt0.c,
	* device/lib/pic16/startup/crt0i.c,
	* device/lib/pic16/startup/crt0iz.c: clean up, make use of access bank
	  explicit, fixed curr_entry loop for >= 256 initializer records,
	  removed debug code (write to 0xf7e)

2008-05-25 Raphael Neider <rneider AT web.de>

	* device/include/pic/pic16f627a.h,
	* device/include/pic/pic16f628a.h,
	* device/include/pic/pic16f648a.h: added missing ports

2008-05-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/float.h: added __INFINITY
	* device/lib/_fsadd.c: handle overflows
	* device/lib/_fsmul.c,
	* device/lib/_fsdiv.c: use __INFINITY
	* device/lib/_fseq.c,
	* device/lib/_fsneq.c: handle -0.0
	* sim/ucsim/s51.src/uc89c51r.cc,
	* sim/ucsim/s51.src/uc89c51rcl.h: fixed bug 1385430
	* sim/ucsim/sim.src/hwcl.h: */* confuses VC
	* src/mcs51/gen.c (genSend): fixed bug with --xstack
	* support/regression/ports/mcs51-xstack-auto/spec.mk: print floats
	* support/regression/tests/snprintf.c: test bug with --xstack

2008-05-19  Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c (callFuncByName):
	  Support nested parenthesis in peephole function arguments (#1967300)

2008-05-19 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (pic16_emitpLabel,pic16_emitpLabelFORCE):
	  fixed duplicate labels (#1911325)

2008-05-19 Raphael Neider <rneider AT web.de>

	* src/regression/empty.c: suppress warning
	* src/regression/pointer1.c: enabled index_by_pointer()
	* src/regression/inline.c: now works for pic16 as well

	* src/pic16/device.c: include dbuf declarations